test/fail/basic_syntax/wrong_arg_count_plain_call.lly
#[
SyntaxError: Function f expects 0 args, but got 1.
Where: File "wrong_arg_count_plain_call.lly" at line 8
]#

define f() {}

f(1)
